<package>
  <name>ecto</name>
  <version>0.6.0</version>
  <description>Ecto is a hybrid C++/Python development framework for constructing and maintaining pipelines.</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="straszheim@willowgarage.com">Troy Straszheim</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <maintainer email="erublee@willowgarage.com">Ethan Rublee</maintainer>
  <license>BSD</license>

  <url>http://ecto.willowgarage.com</url>
  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
